[package]
name = "rtk-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server bridge for RTK (Rust Token Killer) — exposes token-optimized CLI filtering to any MCP-compatible client"
license = "MIT"
repository = "https://github.com/ousamabenyounes/rtk-mcp"
keywords = ["mcp", "rtk", "token-optimization", "cli", "llm"]

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
